--- a/tokenizer/CMakeLists.txt
+++ b/tokenizer/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_library(tokenizer tokenizer.cpp)
 target_include_directories(tokenizer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
