--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_executable(json_eval "./main.cpp")
 add_subdirectory(parser)
 add_subdirectory(tokenizer)
+add_subdirectory(json)
 target_link_libraries(json_eval PUBLIC parser)
 target_link_libraries(json_eval PUBLIC tokenizer)
+target_link_libraries(json_eval PUBLIC json)	
