--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable(json_eval "./main.cpp")
 add_subdirectory(parser)
 add_subdirectory(tokenizer)
 add_subdirectory(json)
+add_subdirectory(argument)
 target_link_libraries(json_eval PUBLIC parser)
 target_link_libraries(json_eval PUBLIC tokenizer)
 target_link_libraries(json_eval PUBLIC json)	
+target_link_libraries(json_eval PUBLIC argument)
