--- a/argument/CMakeLists.txt
+++ b/argument/CMakeLists.txt
@@ -4,3 +4,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_library(argument argument.cpp "argument.h")	
 target_include_directories(argument PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(argument PUBLIC json)
+target_link_libraries(argument PUBLIC parser)
