--- a/json/CMakeLists.txt
+++ b/json/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
-
-add_library(json json.cpp)
-target_link_libraries(json parser)
-target_include_directories(json PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAX_CXX_STANDARD_REQUIRED True)
+
+add_library(json src/json.cpp)
+target_include_directories(json PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include") 
+add_subdirectory(parser)
+target_link_libraries(json PUBLIC parser)
+target_link_libraries(json PUBLIC tokenizer)
